Fix: add font-family and background-color to styles.css and index.html

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,5 +1,9 @@
 /* styles.css */
 
 div {
-  colour: red;
+  background-colour: red;
+  color: white;
+  font-size: 35px;
+  text-align: center;
+  font-weight: bold;
 }
