Fix: colour to color

--- a/foundations/intro-to-css/01-css-methods/styles.css
+++ b/foundations/intro-to-css/01-css-methods/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
 
 div {
-  background-colour: red;
+  background-color: red;
   color: white;
   font-size: 35px;
   text-align: center;
