Fix: integrate number 3 element to share class with element 1 and 5

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,4 +1,5 @@
-    p {
+    .cool,
+    .cooler {
         background-color: rgb(255, 94, 139);
         font-family: "Verdana", "DejaVu Sans", sans-serif;
     }
