Fix: syntax error in id elements from '.' to '#'

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -4,7 +4,7 @@
         font-family: "Verdana", "DejaVu Sans", sans-serif;
     }
 
-    .one {
+    #one {
         color: #3250d9;
         font-size: 36px;
     }
