--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -6,8 +6,8 @@ body {
 .card {
   width: 400px;
   background: #fff;
-  margin: 8px auto;
-  border: 5px solid white;
+  margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
