--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -22,7 +22,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
   display: flex;
   align-items: flex-start;
-  gap: 20px;
+  gap: 15px;
   padding: 20px;
 }
 
@@ -47,9 +47,6 @@ body {
   font-size: 16px;
   height: 24px;
   width: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border: 1px solid #eee;
   padding: 0;
 }
@@ -70,14 +67,31 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  flex-grow: 0;
 }
 
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
 }
 
 .header {
   font-weight: 1000;
-  font-size: 
+  font-size: 20px;
+}
+
+.icon,
+.close-button {
+  flex-shrink: 0;
+}
+
+.soyboy {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+
+.text {
+  margin-bottom: 10px;
 }
