--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -16,6 +16,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 12px;
 }
 
 input {
@@ -23,4 +24,55 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #eeefef;
+}
+
+.content {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  gap: 1em;
+}
+
+
+
+.left-links,
+.right-links {
+  display: flex;
+  gap: 1em;
+  padding: 0;
+}
+
+.left-links {
+  margin-left: 15px;
+} 
+
+.right-links {
+  margin-right: 15px;
+}
+
+ul {
+  list-style:none;
+}
+
+a {
+  color: #808184;
+  text-decoration: none;
 }
